crates/rattler_build_variant_config/tests/snapshots/integration_tests__partial_python_only_combos.snap
---
source: crates/rattler_build_variant_config/tests/integration_tests.rs
expression: combinations
---
- python: "3.10"
- python: "3.11"
- python: "3.9"
