crates/rattler_build_variant_config/tests/snapshots/integration_tests__simple_all_combos.snap
---
source: crates/rattler_build_variant_config/tests/integration_tests.rs
expression: combinations
---
- compiler: clang
  numpy: "1.20"
  python: "3.10"
- compiler: clang
  numpy: "1.20"
  python: "3.11"
- compiler: clang
  numpy: "1.20"
  python: "3.9"
- compiler: clang
  numpy: "1.21"
  python: "3.10"
- compiler: clang
  numpy: "1.21"
  python: "3.11"
- compiler: clang
  numpy: "1.21"
  python: "3.9"
- compiler: clang
  numpy: "1.22"
  python: "3.10"
- compiler: clang
  numpy: "1.22"
  python: "3.11"
- compiler: clang
  numpy: "1.22"
  python: "3.9"
- compiler: gcc
  numpy: "1.20"
  python: "3.10"
- compiler: gcc
  numpy: "1.20"
  python: "3.11"
- compiler: gcc
  numpy: "1.20"
  python: "3.9"
- compiler: gcc
  numpy: "1.21"
  python: "3.10"
- compiler: gcc
  numpy: "1.21"
  python: "3.11"
- compiler: gcc
  numpy: "1.21"
  python: "3.9"
- compiler: gcc
  numpy: "1.22"
  python: "3.10"
- compiler: gcc
  numpy: "1.22"
  python: "3.11"
- compiler: gcc
  numpy: "1.22"
  python: "3.9"
