crates/rattler_build_variant_config/tests/snapshots/integration_tests__simple_config.snap
---
source: crates/rattler_build_variant_config/tests/integration_tests.rs
expression: config
---
compiler:
  - gcc
  - clang
numpy:
  - "1.20"
  - "1.21"
  - "1.22"
python:
  - "3.9"
  - "3.10"
  - "3.11"
