crates/rattler_build_variant_config/tests/snapshots/integration_tests__zip_keys_config.snap
---
source: crates/rattler_build_variant_config/tests/integration_tests.rs
expression: config
---
zip_keys:
  - - python
    - numpy
  - - compiler
    - compiler_version
compiler:
  - gcc
  - clang
compiler_version:
  - 9
  - 10
numpy:
  - "1.20"
  - "1.21"
  - "1.22"
python:
  - "3.9"
  - "3.10"
  - "3.11"
